# semver

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
semver/: __init__.py  patterns.py
tests/: test_main.py  test_semver.py  test_version.py  test_version_range.py
