[tool.poetry]
name = "poetry-semver"
version = "0.1.0"
description = "A semantic versioning library for Python"
authors = ["Sébastien Eustace <sebastien@eustace.io>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/python-poetry/semver"
repository = "https://github.com/python-poetry/semver"

packages = [
    {include = "semver"},
    {include = "tests", format = "sdist"},
]

[tool.poetry.dependencies]
python = "~2.7 || ^3.4"

# The typing module is not in the stdlib in Python 2.7 and 3.4
typing = { version = "^3.6", python = "~2.7 || ~3.4" }

[tool.poetry.dev-dependencies]
pytest = "^4.1"
pytest-cov = "^2.8.1"
tox = "^3.12"
pre-commit = "^1.10"

[tool.isort]
line_length = 88
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
use_parentheses = true
not_skip = "__init__.py"
skip_glob = ["*/setup.py"]
filter_files = true

known_first_party = "semver"
known_third_party = [
    "pytest",
]


[build-system]
requires = ["poetry>=1.0.0b8"]
build-backend = "poetry.masonry.api"
